[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/shipthis/wizards/android/steps/Step7InviteServiceAccount.gd" id="1_step"]

[node name="Step7InviteServiceAccount" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_step")

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Checking..."

[node name="ContentContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="InstructionsNotice" type="RichTextLabel" parent="ContentContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Spacer1" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="InputContainer" type="HBoxContainer" parent="ContentContainer"]
layout_mode = 2

[node name="AccountIdInput" type="LineEdit" parent="ContentContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "e.g. 8110853839480950872"

[node name="InviteButton" type="Button" parent="ContentContainer/InputContainer"]
layout_mode = 2
text = "Invite"

[node name="ErrorLabel" type="Label" parent="ContentContainer"]
visible = false
layout_mode = 2
autowrap_mode = 2

[node name="SuccessLabel" type="Label" parent="ContentContainer"]
visible = false
layout_mode = 2
text = "Service account invited successfully!"
